2009-07-21  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* chrome/content/sogo-connector/general/vcards.utils.js
	We now keep custom fields between roundtrips.
	See http://www.scalableogo.org/bugs/view.php?id=32

2009-07-19  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/sogo-connector/calendar/utils.js: overriden
	"openDialog" to force a refresh of the item calendar before
	displaying the dialog IF the item is an invitation or is read-only.

2009-07-17  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	*
	chrome/content/sogo-connector/calendar/calendars-list-overlay.js:
	fixed an exception occuring when no calendar is selected.

	* chrome/content/inverse-library/sogoWebDAV.js: fixed a bug
	occuring in the XML to JSON converter when the parsed response is
	not flattened.

	* js/CalDAVAclManager.js: we trigger the
	"caldav-component-acl-loaded" or "caldav-component-acl-reset" to
	notify observers that the event entries are ready.

2009-07-15  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	*
	chrome/content/sogo-connector/calendar/calendar-event-dialog.xul:
	fix the privacy label of the privacy statusbar item.

2009-07-09  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/sogo-connector/calendar/calendars-list-overlay.js:
	don't enable the "new items" buttons when the selected calendar is
	marked as read-only.

2009-07-08  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* js/CalDAVAclManager.js: we pass the url of the calendar as data
	argument on every request, for error management. For errors >= 498,
	we remove the entry but for errors > 399, we keep it and mark it
	as lacking ACL support.

2009-07-07  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* js/CalDAVAclManager.js: trigger a "caldav-acl-reset"
	notification where the status code returned by the server is >
	399. This enables listeners to take action when the request chain
	is aborted.

2009-07-06  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* js/CalDAVAclManager.js: trigger the "caldav-acl-loaded"