@@ -21,7 +21,6 @@ overlay chrome://messenger/content/addressbook/pref-editdirectories.xul chrome:/
 style chrome://sogo-connector/content/addressbook/addressbook.groupdav.overlay.xul chrome://sogo-connector/skin/addressbook/addressbook.groupdav.overlay.css
 
 overlay	chrome://calendar/content/sun-calendar-event-dialog.xul chrome://sogo-connector/content/calendar/calendar-event-dialog.xul
-overlay	chrome://calendar/content/calendar-summary-dialog.xul chrome://sogo-connector/content/calendar/calendar-summary-dialog.xul
 overlay	chrome://calendar/content/sun-calendar-event-dialog-attendees.xul chrome://sogo-connector/content/calendar/calendar-event-dialog-attendees.xul
 overlay chrome://calendar/content/calendar-calendars-list.xul chrome://sogo-connector/content/calendar/calendars-list-overlay.xul
 overlay	chrome://lightning/content/messenger-overlay-sidebar.xul chrome://sogo-connector/content/lightning/messenger-overlay-sidebar.xul
