@@ -1,15 +1,0 @@
-<?xml version="1.0"?>
-
-<!DOCTYPE overlay SYSTEM "chrome://sogo-connector/locale/calendar/calendar-event-dialog.dtd">
-
-<?xml-stylesheet type="text/css" href="chrome://global/skin/global.css"?>
-<?xml-stylesheet type="text/css"
-  href="chrome://sogo-connector/skin/calendar/calendar-summary-dialog.css"?>
-<?xml-stylesheet type="text/css"
-  href="chrome://sogo-connector/content/calendar/calendar-summary-dialog.css"?>
-
-<overlay id="inverseCalendarSummaryOverlay"
-  xmlns="http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul">
-  <script type="application/x-javascript"
-    src="chrome://sogo-connector/content/calendar/calendar-summary-dialog.js"/>
-</overlay>
